feat: restrict CORS to env-configured allowed origins